--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,11 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link href="https://vjs.zencdn.net/7.15.4/video-js.css" rel="stylesheet" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Encode+Sans+Expanded:wght@400;700&family=Lato&family=Montserrat&family=PT+Sans:wght@700&display=swap" rel="stylesheet">
     <!-- <script src="https://vjs.zencdn.net/7.15.4/video.min.js"></script> -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/video.js/7.0.0/video.min.js" integrity="sha512-LiILFcpZ9QKSH41UkK59Zag/7enHzqjr5lO2M0wGqGn8W19A/x2rV3iufAHkEtrln+Bt+Zv1U6NlLIp+lEqeWQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/videojs-contrib-dash/5.1.0/videojs-dash.min.js" integrity="sha512-kTsVsYBqVykD9dGEO8IXNnqiNy5LoG8QRc+c34QsXCli3aMZlVncbDzc7AkxpkBZrMRQSzHNYa45J461rcXnyw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
